# mlb-sim

./: .gitignore  NOT_YET.md  README.md  cli.py  config.py  pyproject.toml
.context/: baserunner_advancement.json  batted_ball_outcomes.json  espn_odds_2026.json  fangraphs_batted_ball_2024.json  games_2026_04_09.json  games_2026_04_10.json  games_2026_04_11.json  games_2026_04_12.json  games_2026_04_18.json  games_2026_04_19.json  games_2026_04_20.json  games_2026_04_21.json  games_2026_04_22.json  games_2026_04_23.json  games_2026_04_24.json  games_2026_04_25.json  games_2026_04_26.json  games_2026_04_27.json  games_2026_04_28.json  games_2026_04_29.json  games_2026_04_30.json  games_2026_05_01.json  games_2026_05_02.json  games_2026_05_03.json  games_2026_05_04.json  games_2026_05_05.json  kalshi_historical.json  kalshi_history.json  league_averages_2024.json  paper_ledger.json  park_factors_2024.json  picks_2026_04_13.json  pipeline_2026_04_13.json  pipeline_2026_04_15.json  pipeline_2026_04_18.json  pipeline_2026_04_20.json  pipeline_2026_04_21.json  pipeline_2026_04_22.json  pipeline_2026_04_23.json  pipeline_2026_04_24.json  (+15 more)
backtest/: evaluate.py  json_backtest.py  model_eval.py
betting/: confidence.py  ev.py  predictions.py  risk.py
data/: db.py  fetch.py  kalshi.py  lineup_fetcher.py  load.py
models/: batter_model.py  calibration.py  line_predictor.py  pitcher_model.py  schedule_features.py  team_model.py  weather.py
scripts/: check_live_gate.py  daily_picks.py  daily_pipeline.py  fetch_daily.py  fetch_espn_odds.py  fetch_kalshi_history.py  paper_trade.py  (+6 more)
(+7 files in other folders)
